--- a/index.html
+++ b/index.html
@@ -1,99 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PO Arrival</title>
-
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      max-width: 420px;
-      margin: auto;
-      padding: 20px;
-    }
-
-    h2 {
-      margin-bottom: 20px;
-    }
-
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-
-    input[type="text"] {
-      width: 100%;
-      padding: 10px;
-      margin-top: 5px;
-      font-size: 16px;
-    }
-
-    input[type="checkbox"] {
-      margin-right: 8px;
-      transform: scale(1.2);
-    }
-
-    button {
-      margin-top: 25px;
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-  </style>
+  <title>PO Arrival Check</title>
 </head>
 <body>
+  <h2>PO Arrival Check</h2>
 
-  <h2>PO Arrival Check (POST Test)</h2>
+  <form id="poForm">
+    <label>PO Number:</label><br>
+    <input type="text" id="poNumber" name="po_number" required><br><br>
 
-  <label for="poNumber">PO Number</label>
-  <input type="text" id="poNumber" placeholder="Enter PO number" />
+    <label>
+      <input type="checkbox" id="arrived" name="arrived" value="true" required>
+      Marked as arrived
+    </label><br><br>
 
-  <label>
-    <input type="checkbox" id="arrived" />
-    Marked as arrived
-  </label>
+    <label>Received by:</label><br>
+    <input type="text" id="receivedBy" name="received_by" required><br><br>
 
-  <label for="receivedBy">Received by</label>
-  <input type="text" id="receivedBy" placeholder="Your name" />
-
-  <button onclick="submitForm()">Submit</button>
+    <button type="submit">Submit</button>
+  </form>
 
   <script>
-  async function submitForm() {
-    const po = document.getElementById("poNumber").value.trim();
-    const arrived = document.getElementById("arrived").checked;
-    const receivedBy = document.getElementById("receivedBy").value.trim();
+    const form = document.getElementById("poForm");
 
-    if (!po || !receivedBy || !arrived) {
-      alert("Fill all fields and tick arrived.");
-      return;
-    }
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault(); // stop default form submit
 
-    const data = {
-      po_number: po,
-      arrived: true,
-      received_by: receivedBy
-    };
+      const po = document.getElementById("poNumber").value.trim();
+      const arrived = document.getElementById("arrived").checked;
+      const receivedBy = document.getElementById("receivedBy").value.trim();
 
-    try {
-      // Send POST with no-cors for testing
-      fetch("https://hook.eu2.make.com/0q05ibp52ws4rwa4xm4nvu9utl48ki1s", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(data),
-        mode: "no-cors"  // << temporary fix
-      });
+      if (!po || !receivedBy || !arrived) {
+        alert("Please fill all fields and tick 'Marked as arrived'.");
+        return;
+      }
 
-      alert("Form submitted! Check Make.com for the webhook execution.");
-    } catch (err) {
-      alert("Failed to send POST to Make.com");
-    }
-  }
-</script>
+      const payload = {
+        po_number: po,
+        arrived: arrived,
+        received_by: receivedBy
+      };
 
+      try {
+        await fetch("https://hook.eu2.make.com/0q05ibp52ws4rwa4xm4nvu9utl48ki1s", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(payload)
+        });
 
+        alert("PO submitted successfully! Check Make.com webhook.");
+      } catch (err) {
+        alert("Failed to send PO to Make.com");
+      }
+    });
+  </script>
 </body>
 </html>
