--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
           }
         );
 
-        if (response.ok) {
-          messageDiv.textContent = "Data sent successfully!";
-        } else {
-          messageDiv.textContent = "Error sending data to Make.com";
-        }
+        // Try to read the response as text
+        const text = await response.text();
+
+        // Show the response body from Make
+        messageDiv.textContent = "Response from Make: " + text;
       } catch (err) {
         messageDiv.textContent = "Error sending data to Make.com";
+        console.error(err);
       }
     });
   </script>
